erDiagram
    Users ||--o{ Children : manages
    Users {
        int id PK
        string email UK
        string password_hash
        string name
        datetime created_at
        datetime updated_at
    }

    Children ||--o{ TaskAssignments : receives
    Children ||--o{ TaskTemplates : has
    Children ||--o{ Rewards : redeems
    Children {
        int id PK
        int parent_id FK
        string email UK
        string password_hash
        string name
        int age
        text interests
        text preferences
        int points_balance
        datetime created_at
        datetime updated_at
    }

    TaskTemplates ||--o{ TaskAssignments : generates
    TaskTemplates {
        int id PK
        int child_id FK
        string title
        text description
        int points_value
        string category
        boolean is_active
        string schedule_type "once/daily/weekly"
        json schedule_settings
        datetime created_at
        datetime updated_at
    }

    TaskAssignments {
        int id PK
        int template_id FK
        int child_id FK
        int points_value
        boolean is_completed
        boolean is_approved
        datetime assigned_at
        datetime completed_at
        datetime approved_at
        datetime created_at
        datetime updated_at
    }

    Rewards {
        int id PK
        int child_id FK
        string name
        text description
        int points_cost
        boolean is_redeemed
        boolean is_removed
        string category
        datetime created_at
        datetime updated_at
    }
